--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
             "application/modules/log/models",
             "application/modules/dipo/models",
 			"application/modules/category/models",
-            "application/modules/product/models"			
+            "application/modules/product/models",	
+            "application/modules/zona/models"
         ]
     }
 }
