--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,8 @@
 			"application/modules/category/models",
             "application/modules/product/models",	
             "application/modules/zona/models",
-            "application/modules/principle/models"
+            "application/modules/principle/models",
+            "application/modules/pricelist/models"
         ]
     }
 }
