Update Company Report Sell In dan Sell Out

--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,8 @@
             "application/modules/pricelist/models",
             "application/modules/partner/models",
             "application/modules/suratpesanan/models",
-            "application/modules/invoice/models"
+            "application/modules/invoice/models",
+            "application/modules/companyreport/models"
         ]
     }
 }
