--- a/composer.json
+++ b/composer.json
@@ -36,6 +36,7 @@
             "application/modules/pricelist/models",
             "application/modules/partner/models",
             "application/modules/suratpesanan/models",
+            "application/modules/suratjalan/models",
             "application/modules/invoice/models",
             "application/modules/companyreport/models"
         ]
