Update City jadi Dropdown List

--- a/composer.json
+++ b/composer.json
@@ -41,7 +41,8 @@
             "application/modules/companyreport/models",
             "application/modules/chartofaccount/models",
             "application/modules/jurnal/models",
-            "application/modules/code/models"
+            "application/modules/code/models",
+            "application/modules/city/models"
         ]
     }
 }
