Update District, DIPO

--- a/composer.json
+++ b/composer.json
@@ -42,7 +42,8 @@
             "application/modules/chartofaccount/models",
             "application/modules/jurnal/models",
             "application/modules/code/models",
-            "application/modules/city/models"
+            "application/modules/city/models",
+            "application/modules/district/models"
         ]
     }
 }
