--- a/composer.json
+++ b/composer.json
@@ -39,6 +39,7 @@
             "application/modules/suratjalan/models",
             "application/modules/invoice/models",
             "application/modules/companyreport/models",
+            "application/modules/retur/models",
             "application/modules/chartofaccount/models",
             "application/modules/jurnal/models",
             "application/modules/code/models",
